welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
def alpha() {
	var T = new Array[Color](getMondeHauteur());
	for(w<- 0 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
		}
	}
var x = gatMondeLongueur();
for(y<-1 to x) { 
	alpha();
	gauche();
	avance();
	droite();
	}
}
